--- a/css/style.default.css
+++ b/css/style.default.css
@@ -207,39 +207,9 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 * =====================
 *
 */
-.about-section .skill-item {
-  margin-bottom: 20px;
-}
-
-.about-section .progress-title {
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-
-.about-section .progress {
-  height: 30px;
-  border-radius: 0;
-}
-
-.about-section .progress .progress-bar {
-  background: #4fbfa8;
-}
-
-.about-section .progress .progress-bar-skill1 {
-  background: #9adacd;
-}
-
-.about-section .progress .progress-bar-skill2 {
-  background: #87d3c4;
-}
-
-.about-section .progress .progress-bar-skill3 {
-  background: #74cdba;
-}
-
-.about-section .progress .progress-bar-skill4 {
-  background: #62c6b1;
+.skill-section .card {
+  max-width: 150;
+  max-height: 150;
 }
 
 /*
@@ -269,39 +239,28 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 * =====================
 *
 */
-.testimonials {
-  padding: 0;
-  margin-bottom: 40px;
-}
 
-.testimonials .item {
-  list-style-type: none;
-  margin: 0 5px;
-  background: #fff;
-  padding-bottom: 60px;
-}
-
-.testimonials .item .testimonial {
+.testimonial {
   position: relative;
   padding: 20px;
 }
 
-.testimonials .item .testimonial::after {
+.testimonial::after {
   display: block;
   clear: both;
   content: "";
 }
 
-.testimonials .item .testimonial .text {
+.testimonial .text {
   color: #999;
   margin-bottom: 40px;
 }
 
-.testimonials .item .testimonial .text p {
+.testimonial .text p {
   color: inherit;
 }
 
-.testimonials .item .testimonial .bottom {
+.testimonial .bottom {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -310,33 +269,33 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
   height: 50px;
 }
 
-.testimonials .item .testimonial .bottom .icon {
+.testimonial .bottom .icon {
   color: #4fbfa8;
   font-size: 30px;
   float: left;
   width: 20%;
 }
 
-.testimonials .item .testimonial .name-picture {
+.testimonial .name-picture {
   float: right;
   width: 80%;
   text-align: right;
 }
 
-.testimonials .item .testimonial .name-picture h5 {
+.testimonial .name-picture h5 {
   font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   color: #777;
 }
 
-.testimonials .item .testimonial .name-picture p {
+.testimonial .name-picture p {
   color: #6c757d;
   margin: 0;
   font-size: 0.875rem;
 }
 
-.testimonials .item .testimonial .name-picture img {
+.testimonial .name-picture img {
   float: right;
   width: 60px;
   border-radius: 30px;
@@ -446,6 +405,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 
 .reference {
   margin-bottom: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow: hidden;
 }
 
@@ -474,7 +434,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 }
 
 .reference .overlay {
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -502,6 +462,8 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 
 .reference .overlay p {
   color: #fff;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .reference .reference-title {
@@ -2240,113 +2202,4 @@ code {
 .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #4fbfa8;
-}
-
-/*
-* 9. CARD
-*/
-.card {
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
-}
-
-.card > .list-group:first-child .list-group-item:first-child {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-}
-
-.card > .list-group:last-child .list-group-item:last-child {
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.card-body {
-  padding: 1.25rem;
-}
-
-.card-title {
-  margin-bottom: 0.75rem;
-}
-
-.card-subtitle {
-  margin-top: -0.375rem;
-}
-
-.card-link + .card-link {
-  margin-left: 1.25rem;
-}
-
-.card-header {
-  padding: 0.75rem 1.25rem;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-header:first-child {
-  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
-}
-
-.card-header-transparent {
-  background-color: rgba(0, 0, 0, 0.3);
-  border-bottom: none;
-}
-
-.card-footer {
-  padding: 0.75rem 1.25rem;
-  background-color: #f8f9fa;
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-footer:last-child {
-  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
-}
-
-.card-header-tabs {
-  margin-right: -0.625rem;
-  margin-bottom: -0.75rem;
-  margin-left: -0.625rem;
-  border-bottom: 0;
-}
-
-.card-header-pills {
-  margin-right: -0.625rem;
-  margin-left: -0.625rem;
-}
-
-.card-img-overlay {
-  padding: 1.25rem;
-}
-
-.card-img-overlay-opacity {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-.card-img {
-  border-radius: calc(0.25rem - 1px);
-}
-
-.card-img-top {
-  border-top-left-radius: calc(0.25rem - 1px);
-  border-top-right-radius: calc(0.25rem - 1px);
-}
-
-.card-img-bottom {
-  border-bottom-right-radius: calc(0.25rem - 1px);
-  border-bottom-left-radius: calc(0.25rem - 1px);
-}
-
-.card-deck .card {
-  margin-bottom: 15px;
-}
-
-@media (min-width: 576px) {
-  .card-deck {
-    margin-right: -15px;
-    margin-left: -15px;
-  }
-  .card-deck .card {
-    margin-right: 15px;
-    margin-left: 15px;
-  }
 }
