--- a/css/style.default.css
+++ b/css/style.default.css
@@ -512,6 +512,86 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
   margin-top: 50px;
 }
 
+
+.skill {
+  margin-bottom: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  overflow: hidden;
+}
+
+@media (max-width: 767.98px) {
+  .skill {
+    max-width: 350px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+}
+
+.skill a {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: block;
+}
+
+.skill h3 {
+  font-weight: 400;
+}
+
+.skill img {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.skill .overlay {
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  padding: 15px;
+}
+
+.skill .overlay p {
+  color: #fff;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.skill .skill-title {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+.skill:hover img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.skill:hover .overlay {
+  opacity: 1;
+  -webkit-transform: none;
+  transform: none;
+}
+
 /*
 *
 * =====================
