Fix bug at My Skills tab

--- a/css/style.default.css
+++ b/css/style.default.css
@@ -435,6 +435,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 
 .reference .overlay {
   background: rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 5px 5px rgba(55,54,51, 1);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -545,11 +546,12 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 
 .skill .overlay {
   background: rgba(0, 0, 0, 0.8);
-  width: 100%;
-  height: 100%;
+  box-shadow: 0px 0px 5px 5px rgba(55,54,51, 1);
+  width: 90%;
+  height: 83%;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 10;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
