--- a/css/style.default.css
+++ b/css/style.default.css
@@ -434,7 +434,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 }
 
 .reference .overlay {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   box-shadow: 0px 0px 5px 5px rgba(55,54,51, 1);
   width: 100%;
   height: 100%;
@@ -465,6 +465,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
   color: #fff;
   margin-top: 5px;
   margin-bottom: 5px;
+  font-size: small;
 }
 
 .reference .reference-title {
@@ -545,7 +546,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 }
 
 .skill .overlay {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   box-shadow: 0px 0px 5px 5px rgba(55,54,51, 1);
   width: 90%;
   height: 83%;
